--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
+    "exifreader": "^4.32.0",
     "hash-wasm": "^4.12.0",
     "leaflet": "^1.9.4",
     "naive-ui": "^2.42.0",
