--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
     "exifr": "^7.1.3",
+    "gcoord": "^1.0.7",
     "hash-wasm": "^4.12.0",
     "leaflet": "^1.9.4",
     "naive-ui": "^2.42.0",
