--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@vicons/fluent": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
     "@videojs-player/vue": "^1.0.0",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
     "exifr": "^7.1.3",
     "gcoord": "^1.0.7",
     "hash-wasm": "^4.12.0",
-    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.19.0",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
